fix: mat-slider thumb overflowing

--- a/src/app/shared/components/product-filter/components/product-price-filter/product-price-filter.component.scss
+++ b/src/app/shared/components/product-filter/components/product-price-filter/product-price-filter.component.scss
@@ -1,3 +1,3 @@
 mat-slider {
-    width: 90%;
+    width: 100%;
 }
